--- a/casadocodigo/Interface/Components/NavigationBar/NavigationBar.xib
+++ b/casadocodigo/Interface/Components/NavigationBar/NavigationBar.xib
@@ -8,6 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NavigationBar" customModule="casadocodigo" customModuleProvider="target">
             <connections>
+                <outlet property="backButton" destination="yfJ-fp-nf7" id="4iy-i5-YRd"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="uII-kh-tZq"/>
                 <outlet property="logoImageView" destination="9DH-nh-sfh" id="BQf-jn-QVe"/>
             </connections>
@@ -29,6 +30,14 @@
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yfJ-fp-nf7">
+                    <rect key="frame" x="11" y="12" width="36" height="36"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="tintColor" red="0.98431372549999996" green="0.98039215690000003" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal">
+                        <color key="titleColor" red="0.98431372549999996" green="0.98039215690000003" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="0.66666666666666663" blue="0.37647058823529411" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
