Implemented the new author's scene base layout

--- a/casadocodigo/Interface/Components/SectionTitle/SectionTitle.xib
+++ b/casadocodigo/Interface/Components/SectionTitle/SectionTitle.xib
@@ -17,7 +17,7 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="ojN-B5-Nsu" userLabel="Content View">
             <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1l-UG-xhM" userLabel="Title Label">
                     <rect key="frame" x="0.0" y="3" width="414" height="32"/>
